[metadata]
name = avionmqtt 
version = 0.0.1
author = Sean Kinsey 
author_email = oyvind@kinsey.no 
description = A python library to control bridge between Avi-on based lights and Home Assistant using MQTT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oyvindkinsey/avionmqtt
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    halohome ~=0.7.0
    bleak ~=0.22
    csrmesh ~=0.10

[options.packages.find]
where = src